@startuml RobotController

' namespace Panda.Core.Controller {
    ' class RobotController << (S,red) Singleton >> {
    '     ' + controlType : ControlType
    '     + speed : float
    '     + selectionColor : Color
    '     ' + limitMeshFilter: MeshFilter
    '     + selectionObserver : ISelectionObserver
    '     + articulationChain : ArticulationBody[]
    '     ' + articulationList : List
    '     - instance : RobotController
    '     ' ---------------------------------------
    '     + GetInstance() : RobotController
    '     ' + GetRevoluteJointTargets() : List
    '     ' + GetRevoluteJoints() : List
    '     ' + GetGripper() : IMoveCommand
    '     - Sart()
    '     - Update()
    '     - FixedUpdate()
    '     ' - UpdateControlType(type : ControlType)
    ' }

    ' interface ISelectionObserver {
    '     + GetJoints() : List
    '     + GetSelection() : ICombinedInterface
    '     + Add(robotJoint : ICombinedInterface)
    '     + SetSelectionColor(color : Color)
    '     + void ResetHighlight()
    '     + HasSelection() : Boolean
    '     + ResetSelection()
    '     + Next()
    '     + Previous()
    ' }

    enum MoveDirection {
        Clockwise
        Counterclockwise
        Open
        Close
    }

    interface IJointVisulization {
        + Highlight()
        + ResetHighlight()
        + StoreJointColors() : Color[]
    }

    interface ICombinedInterface implements IJointVisulization, IMoveCommand {
    }

    interface IMoveCommand {
        SetDriveType(type ArticulationDriveType)
        SetToMaxForce()
        ResetForce()
        GetTarget() : float
        Move(direction : MoveDirection)
        MoveToTarget(target : float, speed : float) : IEnumerator
        JointType() : ArticulationJointType
    }

    ' class MaterialExtensions << (C,yellow) >> {
    '     + {static} Color GetMaterialColor(Renderer)
    '     + {static} void SetMaterialColor(Material, Color)
    ' }

    ' class SelectionObserver implements ISelectionObserver{
    '     + joints : List
    '     - selectedJointIndex: int
    '     - seletionColor : Color
    '     - previousColor : Color[]
    '     - selectedJoint : ICombinedInterface
    '     ' ---------------------------------------
    '     + SelectionObserver()
    '     + SetSelectionColor()
    '     + ResetHighlight()
    '     + Next()
    '     + Previous()
    '     + GetJoints() : List
    '     + GetSelection() : ICombinedInterface
    '     + HasSelection() : Boolean
    '     + ResetSelection()
    '     + Add(robotJoint : ICombinedInterface)
    ' }

    class RobotGripper implements ICombinedInterface, IMoveCommand, IJointVisulization {
        - finger1 : RobotJoint
        - finger2 : RobotJoint
        - initalVelocity : float
        + Open : float
        + Close : float
        ' ---------------------------------------
    }

    class RobotJoint implements ICombinedInterface, IMoveCommand, IJointVisulization {
        - joint : ArticulationBody
        - savedForce float
        ' ---------------------------------------
    }

    ' RobotController --> MaterialExtensions : uses
    ' RobotController --> ISelectionObserver : uses
' }

@enduml